# transm

./: .co-authors  .gitignore  CLAUDE.md  README.md  agent-updates.md  pyproject.toml
docs/: architecture.md  capture-component.md  feasibility-assessment.md
src/transm/: __init__.py  analysis.py  audio_io.py  capture.py  cli.py  limiter.py  pipeline.py  preset_loader.py  remix.py  report.py  separation.py  spotify_auth.py  stem_qa.py  types.py
src/transm/dsp/: __init__.py  common.py  deesser.py  expander.py  transient_shaper.py
src/transm/presets/: 2000s-metalcore.toml  __init__.py
tests/: conftest.py  test_analysis.py  test_audio_io.py  test_capture.py  test_deesser.py  test_expander.py  test_limiter.py  test_pipeline.py  test_preset_loader.py  test_remix.py  test_report.py  test_separation.py  test_stem_qa.py  test_transient_shaper.py
