[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transm"
version = "0.1.0"
description = "AI-powered remastering for Loudness War-era metal/rock"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    {name = "TeeYum"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "audio-separator>=0.21",
    "pedalboard>=0.9",
    "pyloudnorm>=0.1",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "typer[all]>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
gpu = ["audio-separator[gpu]"]
perf = ["numba>=0.58"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
transm = "transm.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
transm = ["presets/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring disk I/O or models",
]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
