[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transm"
version = "0.1.0"
description = "AI-powered remastering for Loudness War-era metal/rock"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    {name = "TeeYum"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # Python 3.13 not listed: onnxruntime (required by audio-separator) lacks 3.13 wheels.
    # Analysis/DSP/CLI work on 3.13, but stem separation does not.
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "pedalboard>=0.9",
    "pyloudnorm>=0.1",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "typer[all]>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
separator = ["audio-separator>=0.21"]
gpu = ["audio-separator[gpu]"]
perf = ["numba>=0.58"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
transm = "transm.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
transm = ["presets/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring disk I/O or models",
]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/transm/cli.py" = ["B008"]  # Typer uses function calls in argument defaults by design

[tool.mypy]
python_version = "3.11"
# Not using strict=true — numpy/scipy/pedalboard type stubs cause excessive
# no-any-return noise in strict mode. Using specific useful checks instead.
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = false  # pedalboard re-exports don't conform

[[tool.mypy.overrides]]
module = [
    "audio_separator.*",
    "pedalboard.*",
    "pyloudnorm.*",
    "librosa.*",
    "numba.*",
    "scipy.*",
    "soundfile.*",
    "torch.*",
    "numpy.*",
]
ignore_missing_imports = true
